# VM-GepApplication

./: .env  Dockerfile  PROJECT_STRUCTURE.md  README.md  SISTEMA_ISOLAMENTO.md  ai_service.py  app.py  async_processor.py  background_processor.py  cache_service.py  create_test_candidates.py  create_test_data.py  database.py  debug_upload.py  deploy.bat  docker-compose.yml  fast_processor.py  find_outdated_analysis.py  fix_processing.py  init_supabase.py  models.py  parallel_processor.py  parallel_processor_improved.py  process_all_candidates.py  pyproject.toml  replit.md  reprocess_generic_analysis.py  requirements.txt  restart_server.sh  routes.py  setup_admin_user.py  setup_supabase_tables.py  setup_user_isolation.py  simple_processor.py  streaming_upload.py  test_ai_direct.py  test_bulk_frontend.py  test_bulk_upload.py  test_error_display.py  test_improvements.py  (+4 more)
attached_assets/: Pasted--2025-07-09-00-27-17-0000-2413-INFO-Starting-gunicorn-23-0-0-2025-07-09-00-27-17-0000-2413-1752021194333_1752021194334.txt  Pasted--Voc-um-avaliador-t-cnico-especializado-em-recrutamento-D-uma-nota-de-0-a-10-para-o-cu-1752103505465_1752103505466.txt  Pasted-DEBUG-httpcore-connection-connect-tcp-started-host-api-deepseek-com-port-443-local-address-None-ti-1752021729566_1752021729567.txt  Pasted-DEBUG-openai-base-client-Encountered-httpx-TimeoutException-Traceback-most-recent-call-last-Fi-1752351086649_1752351086651.txt  Pasted-INFO-root-Processing-batch-8-files-36-40-WARNING-PyPDF2-cmap-unknown-widths-0-IndirectObject--1752343475748_1752343475749.txt  (+6 more)
controllers/: routes.py
(+67 files in other folders)
